# dagster-sqlmesh

./: -  .gitignore  .lintstagedrc  .pre-commit-config.yaml  .release-it.json  CHANGELOG.md  Makefile  README.md  commitlint.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-default.yml  release.yml
.husky/: commit-msg
dagster_sqlmesh/: __init__.py  asset.py  config.py  conftest.py  console.py  context.py  controller.py  events.py  resource.py  scheduler.py  signals.py  test_asset.py  test_resource.py  test_sqlmesh_context.py  translator.py  types.py  utils.py
dagster_sqlmesh/controller/: __init__.py  base.py  dagster.py
dagster_sqlmesh/controller/tests_base/: test__build_plan.py
dagster_sqlmesh/controller/tests_plan_and_run/: test_model_code_change.py  test_models.py  test_seeds.py  test_sqlmesh_context.py
dagster_sqlmesh/testing/: __init__.py  context.py
sample/: workspace.yaml
sample/dagster_project/: __init__.py  dagster.yaml  definitions.py  workspace.yaml
sample/sqlmesh_project/: .gitignore  config.yaml
sample/sqlmesh_project/models/marts/: full_model.sql
sample/sqlmesh_project/models/seed/: seed_model_1.sql  seed_model_2.sql
sample/sqlmesh_project/models/staging/: staging_model_1.sql  staging_model_2.sql  staging_model_3.sql  staging_model_4.py  staging_model_5.py
sample/sqlmesh_project/seeds/: seed_data_1.csv  seed_data_2.csv
sample/sqlmesh_project/tests/: test_full_model.yaml
tests/: conftest.py  test_asset.py
tests/context/: test_asset.py  test_sqlmesh_context.py
tests/context/plan_and_run/: test_model_code_change.py  test_models.py  test_seeds.py
tests/controller/base/: test__build_plan.py
